force-app/main/default/objects/Lead/fields/Ophaalpostcode__c.field-meta.xml
<CustomField>
    <fullName>Ophaalpostcode__c</fullName>
    <label>Ophaalpostcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>