force-app/main/default/objects/Lead/fields/Ophaalstraat__c.field-meta.xml
<CustomField>
    <fullName>Ophaalstraat__c</fullName>
    <label>Ophaalstraat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>