force-app/main/default/objects/Lead/fields/Opmerkingen_Offerte__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_Offerte__c</fullName>
    <label>Opmerkingen Offerte</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>