force-app/main/default/objects/Lead/fields/Opmerkingen_Offerte_Akkoord__c.field-meta.xml
<CustomField>
    <fullName>Opmerkingen_Offerte_Akkoord__c</fullName>
    <label>Opmerkingen Offerte Akkoord</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>