force-app/main/default/objects/Lead/fields/Order_ID__c.field-meta.xml
<CustomField>
    <fullName>Order_ID__c</fullName>
    <description>Is used to connect the lead products with the correct lead when an entry is made with gravity forms and zapier.</description>
    <label>Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>