force-app/main/default/objects/Lead/fields/Phone_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Phone_Formatted__c</fullName>
    <formula>IF( BEGINS(Phone  , &apos;0&apos;) , &apos;+31&apos; +  MID(Phone  , 2, 15) , Phone  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Formatted</label>
    <type>Text</type>
</CustomField>