force-app/main/default/objects/Lead/fields/Postcodegebied__c.field-meta.xml
<CustomField>
    <fullName>Postcodegebied__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Postcodegebied</label>
    <referenceTo>Postcode_Range__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>