force-app/main/default/objects/Lead/fields/Products_Complete__c.field-meta.xml
<CustomField>
    <fullName>Products_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for flow Criteria filled by Zapier after a couple of minutes delay so that the products can be inserted into the lead from zapier before converting.</description>
    <label>Products Complete</label>
    <type>Checkbox</type>
</CustomField>