force-app/main/default/objects/Lead/fields/Reden_niet_geintereseerd__c.field-meta.xml
<CustomField>
    <fullName>Reden_niet_geintereseerd__c</fullName>
    <inlineHelpText>Indien de lead niet geïnteresseerd is geef aan waarom.</inlineHelpText>
    <label>Reden niet geïnteresseerd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Moeilijk te reinigen (katoen)</fullName>
            </value>
            <value>
                <fullName>Prijs te hoog</fullName>
            </value>
            <value>
                <fullName>Duurt te lang</fullName>
            </value>
            <value>
                <fullName>Nieuw kopen</fullName>
            </value>
            <value>
                <fullName>Te ver</fullName>
            </value>
            <value>
                <fullName>Concurrent goedkoper</fullName>
                <label>Concurrent gekozen</label>
            </value>
            <value>
                <fullName>Zelf reinigen</fullName>
            </value>
            <value>
                <fullName>Geen reden gegeven</fullName>
            </value>
            <value>
                <fullName>Anders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>