force-app/main/default/objects/Lead/fields/Reden_voor_Huisdier_Compleet__c.field-meta.xml
<CustomField>
    <fullName>Reden_voor_Huisdier_Compleet__c</fullName>
    <label>Reden voor Huisdier Compleet</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>