force-app/main/default/objects/Lead/fields/Referrer_Code__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Code__c</fullName>
    <label>Referrer Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>