force-app/main/default/objects/Lead/fields/Referrer_Partner__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referrer Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Referrer Partner)</relationshipLabel>
    <relationshipName>ReferrerLeads</relationshipName>
    <type>Lookup</type>
</CustomField>