force-app/main/default/objects/Lead/fields/Samenvatting_Werkzaamheden_Email_Templ__c.field-meta.xml
<CustomField>
    <fullName>Samenvatting_Werkzaamheden_Email_Templ__c</fullName>
    <label>Samenvatting Werkzaamheden - Email Templ</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>