force-app/main/default/objects/Lead/fields/SMS_Herinnering_Offerte__c.field-meta.xml
<CustomField>
    <fullName>SMS_Herinnering_Offerte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Als dit is aangevinkt wordt er per SMS een herinnering gestuurd van de offerte.</description>
    <label>SMS Herinnering Offerte</label>
    <type>Checkbox</type>
</CustomField>