force-app/main/default/objects/Lead/fields/Totaal_aantal__c.field-meta.xml
<CustomField>
    <fullName>Totaal_aantal__c</fullName>
    <description>Wordt gebruikt in pdf butler offerte vloerkleed.</description>
    <label>Totaal aantal</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>