force-app/main/default/objects/Lead/fields/Totaal_BTW_Bedrag__c.field-meta.xml
<CustomField>
    <fullName>Totaal_BTW_Bedrag__c</fullName>
    <description>Filled by Delarative Roll up from Lead Products</description>
    <label>Totaal BTW Bedrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>