force-app/main/default/objects/Lead/fields/Totaal_incl_BTW__c.field-meta.xml
<CustomField>
    <fullName>Totaal_incl_BTW__c</fullName>
    <description>Filled by Declarative Roll up from Lead Product</description>
    <label>Totaal incl. BTW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>