force-app/main/default/objects/Lead/fields/Totaal_Zonder_Korting__c.field-meta.xml
<CustomField>
    <fullName>Totaal_Zonder_Korting__c</fullName>
    <label>Totaal Zonder Korting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>