force-app/main/default/objects/Lead/fields/Totale_Minimumtoeslag__c.field-meta.xml
<CustomField>
    <fullName>Totale_Minimumtoeslag__c</fullName>
    <label>Totale Minimumtoeslag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>