force-app/main/default/objects/Lead/fields/Totale_Prijs__c.field-meta.xml
<CustomField>
    <fullName>Totale_Prijs__c</fullName>
    <description>Filled by Declarative lookup tool</description>
    <label>Totaal Excl. BTW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>