force-app/main/default/objects/Lead/fields/Totale_Prijs_excl_Minimale_Toeslag__c.field-meta.xml
<CustomField>
    <fullName>Totale_Prijs_excl_Minimale_Toeslag__c</fullName>
    <description>Used for flow to calculate if a minimum toeslag product needs to be added.
Filled by declarative roll up.</description>
    <label>Totale Prijs excl. Minimale Toeslag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>