force-app/main/default/objects/Lead/fields/TussenVeldSenderName__c.field-meta.xml
<CustomField>
    <fullName>TussenVeldSenderName__c</fullName>
    <description>Field used to populate for merge fields</description>
    <label>TussenVeldSenderName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>