force-app/main/default/objects/Lead/fields/Type_Lead__c.field-meta.xml
<CustomField>
    <fullName>Type_Lead__c</fullName>
    <label>Type Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_Lead</valueSetName>
    </valueSet>
</CustomField>