force-app/main/default/objects/Lead/fields/Uniek_Segment__c.field-meta.xml
<CustomField>
    <fullName>Uniek_Segment__c</fullName>
    <label>Uniek Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>