force-app/main/default/objects/Lead/fields/Unique_Segment__c.field-meta.xml
<CustomField>
    <fullName>Unique_Segment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique Segment</label>
    <type>Checkbox</type>
</CustomField>