force-app/main/default/objects/Lead/fields/Vervolgactie_geldig_tot_datum__c.field-meta.xml
<CustomField>
    <fullName>Vervolgactie_geldig_tot_datum__c</fullName>
    <label>Vervolgactie geldig tot datum</label>
    <type>Date</type>
</CustomField>