force-app/main/default/objects/Lead/fields/Vervolgactie_geldig_tot_tekst__c.field-meta.xml
<CustomField>
    <fullName>Vervolgactie_geldig_tot_tekst__c</fullName>
    <formula>CASE(
  MOD( DATE(1985,6,24) - DATE(1900, 1, 7) + 
       Vervolgactie_geldig_tot_datum__c - DATE(1900, 1, 1), 7),
  0, &quot;zondag&quot;,
  1, &quot;maandag&quot;,
  2, &quot;dinsdag&quot;,
  3, &quot;woensdag&quot;,
  4, &quot;donderdag&quot;,
  5, &quot;vrijdag&quot;,
  6, &quot;zaterdag&quot;,
  &quot;None&quot;
) &amp; &quot; &quot; &amp;
TEXT(DAY(Vervolgactie_geldig_tot_datum__c)) &amp; &quot; &quot; &amp;
CASE(
  MONTH(Vervolgactie_geldig_tot_datum__c),
  1, &quot;januari&quot;,
  2, &quot;februari&quot;,
  3, &quot;maart&quot;,
  4, &quot;april&quot;,
  5, &quot;mei&quot;,
  6, &quot;juni&quot;,
  7, &quot;juli&quot;,
  8, &quot;augustus&quot;,
  9, &quot;september&quot;,
  10, &quot;oktober&quot;,
  11, &quot;november&quot;,
  12, &quot;december&quot;,
  &quot;None&quot;
) &amp; &quot; &quot; &amp;
TEXT(YEAR(Vervolgactie_geldig_tot_datum__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vervolgactie geldig tot tekst</label>
    <type>Text</type>
</CustomField>