force-app/main/default/objects/Lead/fields/Vervolgactie_verzonden__c.field-meta.xml
<CustomField>
    <fullName>Vervolgactie_verzonden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vervolgactie verzonden</label>
    <type>Checkbox</type>
</CustomField>