force-app/main/default/objects/Lead/fields/Websource__c.field-meta.xml
<CustomField>
    <fullName>Websource__c</fullName>
    <label>Web Source</label>
    <type>Url</type>
</CustomField>