force-app/main/default/objects/Lead/fields/Zakelijk__c.field-meta.xml
<CustomField>
    <fullName>Zakelijk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zakelijk?</label>
    <type>Checkbox</type>
</CustomField>