force-app/main/default/objects/Lead/recordTypes/Lead_Zakelijk.recordType-meta.xml
<RecordType>
    <fullName>Lead_Zakelijk</fullName>
    <active>true</active>
    <businessProcess>Zakelijk</businessProcess>
    <label>Lead Zakelijk</label>
</RecordType>