force-app/main/default/objects/Lead/validationRules/Phone_validatie.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_validatie</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED(Phone),
(!REGEX(Phone,&quot;^\\+?[1-9]\\d{1,14}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Graag telefoonnummer in internationaal 164 format.</errorMessage>
</ValidationRule>