force-app/main/default/objects/Lead/listViews/cloudamp__Leads_with_Campaign_Tracker_Search_Data.listView-meta.xml
<ListView>
    <fullName>cloudamp__Leads_with_Campaign_Tracker_Search_Data</fullName>
    <booleanFilter>1 or 2 or 3 or 4 or 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>cloudamp__Paid_Search__c</columns>
    <columns>cloudamp__Search_Engine__c</columns>
    <columns>cloudamp__Keyword__c</columns>
    <columns>cloudamp__gclid__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cloudamp__GA_Campaign__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>cloudamp__GA_Content__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>cloudamp__GA_Medium__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>cloudamp__GA_Source__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>cloudamp__GA_Term__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Leads with Campaign Tracker Search Data</label>
</ListView>