force-app/main/default/objects/Lead/listViews/Leads_Offerte_akkoord.listView-meta.xml
<ListView>
    <fullName>Leads_Offerte_akkoord</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Datum_tijd_Offerte_Verstuurd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Offerte Akkoord</value>
    </filters>
    <label>Leads - Offerte Akkoord</label>
</ListView>