force-app/main/default/objects/Lead/listViews/Leads_Offerteaanvragen.listView-meta.xml
<ListView>
    <fullName>Leads_Offerteaanvragen</fullName>
    <columns>FULL_NAME</columns>
    <columns>Beantwoord__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>cloudamp__GA_Medium__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Offerteaanvraag</value>
    </filters>
    <label>Leads - Offerteaanvragen Particulier</label>
    <sharedTo>
        <role>Accountmanager</role>
        <role>General_Manager</role>
        <role>Klantencontact_Medewerker</role>
        <role>Teamleider_Klantcontact</role>
    </sharedTo>
</ListView>