force-app/main/default/objects/Lead/listViews/Open_leads_afgelopen_14_dagen.listView-meta.xml
<ListView>
    <fullName>Open_leads_afgelopen_14_dagen</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Beantwoord__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Opmerkingen_Offerte__c</columns>
    <columns>Websource__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:14</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open,Offerteaanvraag,Niet gereageerd: Open,Gereageerd: Niet geïnteresseerd,Doorverwezen,Offerte Akkoord</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>notEqual</operation>
        <value>SR Zakelijk algemeen</value>
    </filters>
    <label>Open leads afgelopen 14 dagen</label>
    <sharedTo>
        <group>Kantoor</group>
    </sharedTo>
</ListView>