force-app/main/default/objects/Lead/listViews/Open_leads_Foto_te_beoordelen.listView-meta.xml
<ListView>
    <fullName>Open_leads_Foto_te_beoordelen</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Meubelreiniging_status__c</columns>
    <columns>Beantwoord__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>cloudamp__GA_Medium__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Beantwoord__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Offerteaanvraag</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/7/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>Offerte_Bellen_Status__c</field>
        <operation>notEqual</operation>
        <value>1. Bellen,2. Bellen,3. Bellen</value>
    </filters>
    <filters>
        <field>Meubelreiniging_status__c</field>
        <operation>equals</operation>
        <value>1e beoordeling,2e beoordeling</value>
    </filters>
    <label>Open leads - Foto te beoordelen</label>
</ListView>