force-app/main/default/objects/Lead/listViews/Open_leads_Kantoor_oppakken.listView-meta.xml
<ListView>
    <fullName>Open_leads_Kantoor_oppakken</fullName>
    <columns>FULL_NAME</columns>
    <columns>Offerte_Bellen_Status__c</columns>
    <columns>Beantwoord__c</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Offerte_Bellen_Status__c</field>
        <operation>equals</operation>
        <value>1. Bellen</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/4/2022 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Gereageerd: Niet geïnteresseerd</value>
    </filters>
    <label>Open leads - Kantoor oppakken</label>
    <sharedTo>
        <group>Kantoor</group>
    </sharedTo>
</ListView>