force-app/main/default/objects/Lead/listViews/SofaSaver_Bestellingen.listView-meta.xml
<ListView>
    <fullName>SofaSaver_Bestellingen</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Beantwoord__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.CITY</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>Websource__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>cloudamp__GA_Medium__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Offerte Akkoord</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>9/7/2022 12:00 AM</value>
    </filters>
    <label>SofaSaver - Bestellingen</label>
</ListView>